# jax-ai-stack

./: core_deps.txt
seed_env/: pyproject.toml
seed_env/python3_11/: jax_ai_stack_requirements_lock_3_11.txt  pyproject.toml
seed_env/python3_12/: jax_ai_stack_requirements_lock_3_12.txt  pyproject.toml
seed_env/python3_13/: jax_ai_stack_requirements_lock_3_13.txt  pyproject.toml
