# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-ai-stack"
description = "jax-ai-stack is a simple, performant and scalable Jax LLM!"
version = "0.0.1"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["llm", "jax", "llama", "mistral", "mixtral", "gemma", "deepseek"]
requires-python = "==3.13.*"
dependencies = [
    "absl-py>=2.3.1",
    "aiofiles>=24.1.0",
    "array-record>=0.8.1 ; sys_platform != 'win32'",
    "attrs>=25.3.0",
    "auditwheel>=6.4.1",
    "build>=1.2.2.post1",
    "cffi>=1.17.1 ; platform_python_implementation == 'PyPy'",
    "chex>=0.1.90",
    "cloudpickle>=3.1.1",
    "colorama>=0.4.6",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "dataclasses-json>=0.6.7",
    "dm-tree>=0.1.9",
    "etils>=1.13.0",
    "execnet>=2.1.1",
    "filelock>=3.18.0",
    "flatbuffers>=25.2.10",
    "flax>=0.11.1",
    "fonttools>=4.59.0",
    "fsspec>=2025.7.0",
    "grain>=0.2.12",
    "humanize>=4.13.0",
    "hypothesis>=6.136.4",
    "importlib-resources>=6.5.2",
    "iniconfig>=2.1.0",
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "jaxtyping>=0.3.2",
    "kiwisolver>=1.4.8",
    "libtpu>=0.0.19 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "markdown-it-py>=3.0.0",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.3",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.5.3",
    "more-itertools>=10.8.0",
    "mpmath>=1.3.0",
    "msgpack>=1.1.1",
    "mypy-extensions>=1.1.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.1.3",
    "opt-einsum>=3.4.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.24",
    "orbax-export>=0.0.6",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pluggy>=1.6.0",
    "portpicker>=1.6.0",
    "protobuf>=6.32.0",
    "psutil>=7.0.0",
    "pycparser>=2.22 ; platform_python_implementation == 'PyPy'",
    "pyelftools>=0.32",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "pyproject-hooks>=1.2.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
    "simplejson>=3.20.1",
    "six>=1.17.0",
    "sortedcontainers>=2.4.0",
    "tensorstore>=0.1.76",
    "toolz>=1.0.0",
    "treescope>=0.1.10",
    "typing-extensions>=4.14.1",
    "typing-inspect>=0.9.0",
    "wadler-lindig>=0.1.7",
    "wheel>=0.45.1",
    "wrapt>=1.17.3",
    "zipp>=3.23.0",
    "zstandard>=0.23.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

# TODO(kanglant): Remove this once maxtext src-layout restructure done.
[tool.hatch.build.targets.wheel]
packages = ["jax-ai-stack"]

[tool.hatch.metadata]
allow-direct-references = true
